--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-<title>Centro Comunitario</title>
+<title>Centro Comunitario Matias Barbosa</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="O Centro Comunitário de Matias Barbosa é uma Instituição de Longa Permanência para Idosos (ILPI), sem fins lucrativos e filantrópica, localizada em Matias Barbosa, MG. Oferecemos cuidados e assistência de qualidade para 26 idosos e um adulto sem referência familiar. Saiba mais sobre nossos serviços e como você pode se envolver.">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@centrocmatias">
+<meta name="twitter:title" content="Centro Comunitario Matias Barbosa">
+<meta name="twitter:description" content="O Centro Comunitário de Matias Barbosa é uma Instituição de Longa Permanência para Idosos (ILPI), sem fins lucrativos, filantrópica. Atende atualmente 26 idosos e um adulto sem referência familiar.">
+<meta name="twitter:image" content="https://ccmb.vercel.app/">
+
+<meta property="og:title" content="Centro Comunitario Matias Barbosa">
+<meta property="og:description" content="O Centro Comunitário de Matias Barbosa é uma Instituição de Longa Permanência para Idosos (ILPI), sem fins lucrativos, filantrópica. Atende atualmente 26 idosos e um adulto sem referência familiar">
+<meta property="og:image" content="https://static.wixstatic.com/media/998e4b_12966992d80443999c24b17ebfe34bb7~mv2.jpg/v1/fill/w_1201,h_351,al_c,q_85,usm_0.66_1.00_0.01,enc_auto/998e4b_12966992d80443999c24b17ebfe34bb7~mv2.jpg">
+<meta property="og:url" content="https://ccmb.vercel.app/">
+
+
+
+
+
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inconsolata">
 <style>
